Fixed gap between courier options

--- a/css/delivery_request_seeker/delivery_request_seeker.css
+++ b/css/delivery_request_seeker/delivery_request_seeker.css
@@ -122,6 +122,11 @@ input.datetime {
 
 /* ========================== */
 
+.form-courier {
+    display: grid;
+    gap: 1rem;
+}
+
 input:focus {
     border-color: var(--color-primary);
 }
